--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
   </head>
 
   <body>
-<h1>Ingy dot Net's Projects</h1>
+<h1>Ingy dot Net:</h1>
 
+<h2>Major GitHub Projects</h2>
 <ul>
 <li><b>
 <a href="http://github.com/ingydotnet/cdent">C'Dent</a>
@@ -19,6 +20,11 @@
 <a href="http://github.com/ingydotnet/testml">TestML</a>
 </b> - A Generic Testing Meta Language</li>
 </ul>
+
+<h2>Talks</h2>
+<ul>
+</ul>
+
   </body>
 </html>
 
